57 resolve scrolling issues on comment collapse (#58)
* Add comment store and new indexed db handlers

* Update collapse id list
Update styles on flashing items
Improve scroll to id logic

* Remove logging calls

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -50,6 +50,7 @@ pre {
 }
 
 .collapsed {
+  --flash-color: #ff6600;
   animation: flash-background 3s;
 }
 
@@ -59,7 +60,7 @@ pre {
   }
   /* Adding a step in the middle */
   25% {
-    background: #ff6600;
+    background: var(--flash-color);
   }
   100% {
     background: white;
